--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 		}
 		function print(vars){
 			printDiv = document.getElementById("print")
+			printDiv.innerHTML = ""
 			keys = Object.keys(vars)
 			for (var i = 0; i < keys.length; i++) {
 				var tr = document.createElement("tr")
