--- a/index.html
+++ b/index.html
@@ -3,11 +3,42 @@
 <head>
 	<meta charset="utf-8">
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
  	<link rel="stylesheet" type="text/css" href="style.css">
+
 	<title>Compilador SBN</title>
 </head>
 <body>
-	<div class="card">
+	<div class="container d-flex flex-column gap-5 mt-5">
+		<header class="container d-flex align-items-center justify-content-center">
+			<h1 class="h1">Compiler SBN</h1>
+		</header>
+		<section class="container">
+			<nav class="container">
+				<button class="btn btn-outline-primary" onclick="textCode.execute()">Executar</button>
+			</nav>
+			<div class="container row gap-5 p-5" style="height:550px">
+				<textarea class="container col" id="input">
+initialize:
+	temp = 0
+	a = 2
+	b = 2
+;
+start:
+	sbn temp, a, 2
+	sbn b, temp, exit
+;
+exit:exit;
+				</textarea>
+
+				<textarea class="container col" id="output"></textarea>
+			</div>
+	</section>
+	<footer class="container d-flex align-items-center justify-content-center">Coded by
+		<a class="link ms-2" href="https://github.com/vjrsz">Valter Jr</a>.</footer>
+	</div>
+	
+	<!--<div class="card">
 		<div class="card-2 title">
 			<h1>Compilador SBN</h1>
 		</div>
@@ -31,7 +62,7 @@
 		</div>
 		<div class="compile">
 			<div class="btns">
-				<button onclick="execute()">Executar</button>
+				<button onclick="textCode.execute()">Executar</button>
 			</div>
 			<div class="print">
 				<h1>Variaveis</h1>
@@ -39,167 +70,8 @@
 				</table>
 			</div>
 		</div>
-	</div>
-	<script type="text/javascript">
-		let count_lines = 0
-		let count_vars = 0
-
-		function addLines(){
-			count_lines += 1
-
-			var line = document.createElement("div")
-			var span1 = document.createElement("span")
-			var span2 = document.createElement("span")
-			var span3 = document.createElement("span")
-			var ipt1 = document.createElement("input")
-			var ipt2 = document.createElement("input")
-			var ipt3 = document.createElement("input")
-
-			line.id = "line-" + count_lines
-			ipt1.name = 'var1'
-			ipt2.name = 'var2'
-			ipt3.name = 'var3'
-
-			span1.innerHTML = count_lines + ": "
-			span2.innerHTML = "sbn("
-			span3.innerHTML = ")"
-
-			line.append(span1)
-			line.append(span2)
-			line.append(ipt1)
-			line.append(ipt2)
-			line.append(ipt3)
-			line.append(span3)
-
-			let lines = document.getElementById("lines")
-			let last = lines.children.length-1
-
-			lines.insertBefore(line, lines.children[last])
-			document.getElementById("id-exit").innerHTML = count_lines + 1
-		}
-		function removeLines(){
-			if(count_lines <= 0) return
-
-			var line = document.getElementById("line-"+count_lines)
-			document.getElementById('lines').removeChild(line)
-			count_lines -= 1
-
-			document.getElementById("id-exit").innerHTML = count_lines + 1
-		}
-		function addVars(){
-			count_vars += 1
-
-			var line = document.createElement("div")
-			var span1 = document.createElement("span")
-			var span2 = document.createElement("span")
-			var ipt1 = document.createElement("input")
-			var ipt2 = document.createElement("input")
-
-			line.id = "var-" + count_vars
-			ipt1.name = 'name'
-			ipt2.name = 'value'
-
-			span1.innerHTML = "name: "
-			span2.innerHTML = "value: "
-
-			line.append(span1)
-			line.append(ipt1)
-			line.append(span2)
-			line.append(ipt2)
-			document.getElementById("vars").append(line)
-		}
-		function removeVars(){
-			if(count_vars <= 0) return
-				
-			var line = document.getElementById("var-"+count_vars)
-			document.getElementById('vars').removeChild(line)
-			count_vars -= 1
-		}
-		function execute(){
-			let vars = {}
-			let sbn_codigo = []
-
- 			vars = getValuesVars()
-			sbn_codigo = getValuesLines()
-
-			vars = compile(vars, sbn_codigo)
-
-			print(vars)
-		}
-		function getValuesVars(){
-			let vars = {}
-			for (var i = 1; i <= count_vars; i++) {
-				var line = document.getElementById("var-"+i)
-				var name = line.children[1].value
-				var value = line.children[3].value*1
-
-				vars[name] = value
-			}
-			return vars
-		}
-		function getValuesLines(){
-			var sbn_codigo = []
-			for (var i = 1; i <= count_lines; i++) {
-				var line = document.getElementById("line-"+i)
-				var v1 = line.children[2].value
-				var v2 = line.children[3].value
-				var v3 = line.children[4].value*1
-
-				sbn_codigo.push([v1, v2, v3])
-			}
-			sbn_codigo.push([0, 0, 0])
-			return sbn_codigo
-		}
-		function print(vars){
-			printDiv = document.getElementById("print")
-			printDiv.innerHTML = ""
-			keys = Object.keys(vars)
-			for (var i = 0; i < keys.length; i++) {
-				var tr = document.createElement("tr")
-				var td1 = document.createElement("td")
-				var td2 = document.createElement("td")
-
-				td1.innerHTML =  keys[i] 
-				td2.innerHTML = vars[keys[i]]
-				tr.append(td1)
-				tr.append(td2)
-				printDiv.append(tr)
-			}
-		}
-
-	</script>
-	<script type="text/javascript">
-		const control = {
-			linha_atual: 1,
-			exit: true,
-		}
-		function sbn(a, b, para){
-			if(para == 0){
-				control.exit = false
-				return;
-			}
-			console.log(control.vars[a], control.vars[b])
-			control.vars[a] = control.vars[a] - control.vars[b] 
-
-			if(control.vars[a] < 0) control.linha_atual = para
-			else control.linha_atual += 1
-		}
-
-		function compile(vars, sbn_codigo){
-			control.vars = vars
-			control.linha_atual = 1
-			control.exit = true
-
-			while(control.exit){
-				att = sbn_codigo[control.linha_atual-1]
-				sbn(att[0], att[1], att[2])
-			}
-
-			console.log(vars)
-			console.log(sbn_codigo)
-			console.log(control)
-			return vars
-		}
-	</script>
+	</div>-->
+	<script src="compiler.js" type="text/javascript"></script>
+	<script src="main.js" type="text/javascript"></script>
 </body>
 </html>
