--- a/index.html
+++ b/index.html
@@ -3,203 +3,32 @@
 <head>
 	<meta charset="utf-8">
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
- 	<link rel="stylesheet" type="text/css" href="style.css">
+ 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<title>Compilador SBN</title>
 </head>
 <body>
 	<div class="card">
-		<div class="card-2 title">
+		<div class="card-2">
 			<h1>Compilador SBN</h1>
 		</div>
-		<div class="card-2" id="vars">
-			<div class="btns">
-				<button onclick="addVars()" >Adiconar Variavel</button>
-				<button onclick="removeVars()" >Remover Variavel</button>
-			</div>
-			
+		<div class="card-2">
+			<h2>
+				Desenvolvido por Valter Jr.
+			</h2>
+			<p>
+				Dicas antes de utilizado : 
+				<ul>
+					<li>O compilador não está 100% completo então tome cuidado ao usá-lo</li>
+					<li>Se ele travar e não lhe der uma resposta provavelmente, seu código deu loop. revise-o!;</li>
+					<li>verificar se as variaveis coicidem, por que o compilador nao prever isso.</li>
+					<li>o compilador basicamente não faz nenhuma averiguação de sintaxe, então tome cuidado ao usá-lo.</li>
+					<li>Qualquer dúvida pode entrar em contato pelo meu email <u>juniornunes1008@gmail.com</u></li>
+				</ul>
+			</p>
 		</div>
-		<div class="card-2" id="lines">
-			<div class="btns">
-				<button onclick="addLines()" >Adiconar Linha</button>
-				<button onclick="removeLines()" >Remover Linha</button>
-			</div>
-
-			<div id="line-exit">
-				<span id="id-exit">1</span>
-				<span>: Exit</span>
-			</div>
-		</div>
-		<div class="compile">
-			<div class="btns">
-				<button onclick="execute()">Executar</button>
-			</div>
-			<div class="print">
-				<h1>Variaveis</h1>
-				<table id="print">
-				</table>
-			</div>
+		<div class="card-2">
+			<a href="./v1/">Ir para o Compilador</a>
 		</div>
 	</div>
-	<script type="text/javascript">
-		let count_lines = 0
-		let count_vars = 0
-
-		function addLines(){
-			count_lines += 1
-
-			var line = document.createElement("div")
-			var span1 = document.createElement("span")
-			var span2 = document.createElement("span")
-			var span3 = document.createElement("span")
-			var ipt1 = document.createElement("input")
-			var ipt2 = document.createElement("input")
-			var ipt3 = document.createElement("input")
-
-			line.id = "line-" + count_lines
-			ipt1.name = 'var1'
-			ipt2.name = 'var2'
-			ipt3.name = 'var3'
-
-			span1.innerHTML = count_lines + ": "
-			span2.innerHTML = "sbn("
-			span3.innerHTML = ")"
-
-			line.append(span1)
-			line.append(span2)
-			line.append(ipt1)
-			line.append(ipt2)
-			line.append(ipt3)
-			line.append(span3)
-
-			let lines = document.getElementById("lines")
-			let last = lines.children.length-1
-
-			lines.insertBefore(line, lines.children[last])
-			document.getElementById("id-exit").innerHTML = count_lines + 1
-		}
-		function removeLines(){
-			if(count_lines <= 0) return
-
-			var line = document.getElementById("line-"+count_lines)
-			document.getElementById('lines').removeChild(line)
-			count_lines -= 1
-
-			document.getElementById("id-exit").innerHTML = count_lines + 1
-		}
-		function addVars(){
-			count_vars += 1
-
-			var line = document.createElement("div")
-			var span1 = document.createElement("span")
-			var span2 = document.createElement("span")
-			var ipt1 = document.createElement("input")
-			var ipt2 = document.createElement("input")
-
-			line.id = "var-" + count_vars
-			ipt1.name = 'name'
-			ipt2.name = 'value'
-
-			span1.innerHTML = "name: "
-			span2.innerHTML = "value: "
-
-			line.append(span1)
-			line.append(ipt1)
-			line.append(span2)
-			line.append(ipt2)
-			document.getElementById("vars").append(line)
-		}
-		function removeVars(){
-			if(count_vars <= 0) return
-				
-			var line = document.getElementById("var-"+count_vars)
-			document.getElementById('vars').removeChild(line)
-			count_vars -= 1
-		}
-		function execute(){
-			let vars = {}
-			let sbn_codigo = []
-
- 			vars = getValuesVars()
-			sbn_codigo = getValuesLines()
-
-			vars = compile(vars, sbn_codigo)
-
-			print(vars)
-		}
-		function getValuesVars(){
-			let vars = {}
-			for (var i = 1; i <= count_vars; i++) {
-				var line = document.getElementById("var-"+i)
-				var name = line.children[1].value
-				var value = line.children[3].value*1
-
-				vars[name] = value
-			}
-			return vars
-		}
-		function getValuesLines(){
-			var sbn_codigo = []
-			for (var i = 1; i <= count_lines; i++) {
-				var line = document.getElementById("line-"+i)
-				var v1 = line.children[2].value
-				var v2 = line.children[3].value
-				var v3 = line.children[4].value*1
-
-				sbn_codigo.push([v1, v2, v3])
-			}
-			sbn_codigo.push([0, 0, 0])
-			return sbn_codigo
-		}
-		function print(vars){
-			printDiv = document.getElementById("print")
-			printDiv.innerHTML = ""
-			keys = Object.keys(vars)
-			for (var i = 0; i < keys.length; i++) {
-				var tr = document.createElement("tr")
-				var td1 = document.createElement("td")
-				var td2 = document.createElement("td")
-
-				td1.innerHTML =  keys[i] 
-				td2.innerHTML = vars[keys[i]]
-				tr.append(td1)
-				tr.append(td2)
-				printDiv.append(tr)
-			}
-		}
-
-	</script>
-	<script type="text/javascript">
-		const control = {
-			linha_atual: 1,
-			exit: true,
-		}
-		function sbn(a, b, para){
-			if(para == 0){
-				control.exit = false
-				return;
-			}
-			console.log(control.vars[a], control.vars[b])
-			control.vars[a] = control.vars[a] - control.vars[b] 
-
-			if(control.vars[a] < 0) control.linha_atual = para
-			else control.linha_atual += 1
-		}
-
-		function compile(vars, sbn_codigo){
-			control.vars = vars
-			control.linha_atual = 1
-			control.exit = true
-
-			while(control.exit){
-				att = sbn_codigo[control.linha_atual-1]
-				sbn(att[0], att[1], att[2])
-			}
-
-			console.log(vars)
-			console.log(sbn_codigo)
-			console.log(control)
-			return vars
-		}
-	</script>
 </body>
 </html>
