--- a/v1/index.html
+++ b/v1/index.html
@@ -3,13 +3,17 @@
 <head>
 	<meta charset="utf-8">
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
- 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Compilador SBN</title>
 </head>
 <body>
 	<div class="card">
 		<div class="card-2 title">
-			<h1>Compilador SBN</h1>
+			<h1>Compilador SBN <button type="button" class="btn btn-alert-st" data-bs-toggle="modal" data-bs-target="#aviso">
+				<i class="fa-solid fa-triangle-exclamation"></i>
+			</button></h1>
+			
 		</div>
 		<div class="card-2" id="vars">
 			<div class="btns">
@@ -39,6 +43,33 @@
 				</table>
 			</div>
 		</div>
+	</div>
+	<div class="modal fade" id="aviso" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content">
+				<div class="modal-header">
+					<div class="row">
+						<h1>Compilador SBN</h1>
+						<p>Desenvolvido por Valter Jr.</p>
+					</div>
+				</div>
+				<div class="modal-body">
+					<p>
+						Dicas antes de utilizado : 
+						<ul>
+							<li>O compilador não está 100% completo então tome cuidado ao usá-lo</li>
+							<li>Se ele travar e não lhe der uma resposta provavelmente, seu código deu loop. revise-o!;</li>
+							<li>verificar se as variaveis coicidem, por que o compilador nao prever isso.</li>
+							<li>o compilador basicamente não faz nenhuma averiguação de sintaxe, então tome cuidado ao usá-lo.</li>
+							<li>Qualquer dúvida pode entrar em contato pelo meu email <u>juniornunes1008@gmail.com</u></li>
+						</ul>
+					</p>
+				</div>
+				<div class="modal-footer">
+				  <button type="button" class="btn" data-bs-dismiss="modal">Close</button>
+				</div>
+			  </div>
+		</div> 
 	</div>
 	<script type="text/javascript">
 		let count_lines = 0
@@ -201,5 +232,13 @@
 			return vars
 		}
 	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+	<script src="https://kit.fontawesome.com/529ca5de51.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+	<script type="text/javascript">
+		$(window).on('load', function() {
+			$('#aviso').modal('show');
+		});
+	</script>	
 </body>
 </html>
