--- a/v2/index.html
+++ b/v2/index.html
@@ -9,7 +9,7 @@
 
 	<title>Compilador SBN</title>
 </head>
-<body>
+<!--<body>
 	<div id="app"></div>
 	<div class="container d-flex flex-column gap-5 p-5">
 		<header class="container d-flex align-items-center justify-content-center">
@@ -44,5 +44,8 @@ exit:exit;
 	</div>
 	<script src="./src/js/main.js" type="text/javascript"></script>
 	<script src="./src/js/compiler.js" type="text/javascript"></script>
+</body>-->
+<body>
+	<p>Versão descontinuada!</p>
 </body>
 </html>
